<resources>
    <string name="app_name">Kitchen Timer</string>
    <string name="timerView">タイマー</string>
    <string name="startButton">スタート</string>
    <string name="stopButton">ストップ</string>
    <string name="tenSeconds">10秒</string>
    <string name="oneSecond">1秒</string>
    <string name="resetButton">リセット</string>
    <string name="tenMinutes">10分</string>
    <string name="oneMinute">1分</string>
</resources>
